--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
 </head>
 <body>
     <!-- visible content goes here -->  
+    <div>
+        <h1>
+            Is this just a blank page?
+        </h1>
+        <p class="invs"></p>
+    </div>
+
     
 </body>
 </html>
