change to main page

--- a/index.html
+++ b/index.html
@@ -4,18 +4,19 @@
     <!-- meta tags, links to css, etc. -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Final</title>
+    <title>😈useAbull😈</title>
     <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 <body>
     <!-- visible content goes here -->  
     <div>
-        <h1>
+        <h1 id="mainHeading">
             Is this just a blank page?
         </h1>
-        <p class="invs"></p>
+        <p class="invs" id="button"></p>
     </div>
 
     
+     <script src="assets/js/main.js"></script>
 </body>
 </html>
