--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <h1 id="mainHeading">
             Is this just a blank page?
         </h1>
-        <p class="invs" id="button"></p>
+        <p class="invs" id="button">.</p>
         <img id="title-image" class="title" src="assets/img/title.png" alt="Title Image" style="width: 1200px;">
         <img id="enter-image" class="enter" src="assets/img/enter.png" alt="Enter Image" style="width: 1200px;">
   
